Improve file system and fix banner

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <header class="banner" id="home">
         <video class="banner-video" autoplay muted loop playsinline>
-            <source src="ambicao-cerealis.webm" type="video/webm">
-            <source src="ambicao-cerealis.mov" type="video/quicktime">
+            <source src="/assets/videos/Ambicao-Cerealis.webm" type="video/webm">
+            <source src="/assets/videos/Ambicao-Cerealis.mov" type="video/quicktime">
         </video>
         <h1>Turning Cereal Heritage into Supply Security</h1>
         <p>Retailers deserve a stable and flexible supply chain. Cerealis delivers.</p>
@@ -56,50 +56,50 @@
                         
                         <div class="cereal-list" id="children-cereals">
                             <div class="cereal-item active" data-cereal="star-shaped">
-                                <img src="cereals/star-shaped-thumb.png" alt="Star-shaped cereals" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/star-shaped-thumb.png" alt="Star-shaped cereals" class="cereal-thumbnail">
                                 <span>Star-shaped cereals</span>
                             </div>
                             <div class="cereal-item" data-cereal="cookie">
-                                <img src="cereals/cookie-thumb.png" alt="Cookie cereals" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/cookie-thumb.png" alt="Cookie cereals" class="cereal-thumbnail">
                                 <span>Cookie cereals</span>
                             </div>
                             <div class="cereal-item" data-cereal="chocolate">
-                                <img src="cereals/choco-rice-thumb.png" alt="Chocolate-flavored cereals" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/choco-rice-thumb.png" alt="Chocolate-flavored cereals" class="cereal-thumbnail">
                                 <span>Chocolate-flavored cereals</span>
                             </div>
                             <div class="cereal-item" data-cereal="honey">
-                                <img src="cereals/honey-squares-thumb.png" alt="Honey-flavored squares" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/honey-squares-thumb.png" alt="Honey-flavored squares" class="cereal-thumbnail">
                                 <span>Honey-flavored squares</span>
                             </div>
                             <div class="cereal-item" data-cereal="filled">
-                                <img src="cereals/filled-pillows-thumb.png" alt="Filled pillows" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/filled-pillows-thumb.png" alt="Filled pillows" class="cereal-thumbnail">
                                 <span>Filled pillows</span>
                             </div>
                             <div class="cereal-item" data-cereal="loops">
-                                <img src="cereals/loops-thumb.png" alt="Loops and balls" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/loops-thumb.png" alt="Loops and balls" class="cereal-thumbnail">
                                 <span>Loops and balls</span>
                             </div>
                         </div>
 
                         <div class="cereal-list hidden" id="classic-cereals">
                             <div class="cereal-item" data-cereal="corn-flakes">
-                                <img src="cereals/cornflakes-thumb.png" alt="Corn flakes" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/cornflakes-thumb.png" alt="Corn flakes" class="cereal-thumbnail">
                                 <span>Corn flakes</span>
                             </div>
                             <div class="cereal-item" data-cereal="bran">
-                                <img src="cereals/branflakes-thumb.png" alt="Bran/Wheat flakes" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/branflakes-thumb.png" alt="Bran/Wheat flakes" class="cereal-thumbnail">
                                 <span>Bran/Wheat flakes</span>
                             </div>
                             <div class="cereal-item" data-cereal="rice">
-                                <img src="cereals/rice-flakes-thumb.png" alt="Rice/Wheat flakes" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/rice-flakes-thumb.png" alt="Rice/Wheat flakes" class="cereal-thumbnail">
                                 <span>Rice/Wheat flakes</span>
                             </div>
                             <div class="cereal-item" data-cereal="crispies">
-                                <img src="cereals/rice-crispies-thumb.png" alt="Rice crispies" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/rice-crispies-thumb.png" alt="Rice crispies" class="cereal-thumbnail">
                                 <span>Rice crispies</span>
                             </div>
                             <div class="cereal-item" data-cereal="granola">
-                                <img src="cereals/bransticks-thumb.png" alt="Granola & Muesli" class="cereal-thumbnail">
+                                <img src="/assets/images/cereals/bransticks-thumb.png" alt="Granola & Muesli" class="cereal-thumbnail">
                                 <span>Granola & Muesli</span>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
 
                     <div class="cereal-display">
                         <div class="cereal-image-container">
-                            <img src="cereals/star-shaped-thumb.png" alt="Selected cereal" id="selected-cereal-image">
+                            <img src="/assets/images/cereals/star-shaped-thumb.png" alt="Selected cereal" id="selected-cereal-image">
                             <div class="cereal-nav">
                                 <button class="nav-btn prev" aria-label="Previous cereal">
                                     <i class="fas fa-chevron-left"></i>
@@ -273,11 +273,11 @@
                     <h3>Sustainable Ingredients</h3>
                     <div class="certifications">
                         <div class="cert-item">
-                            <img src="Rainforest-Certified.png" alt="Rainforest Alliance Certified" class="cert-logo">
+                            <img src="/assets/images/Rainforest-Certified.png" alt="Rainforest Alliance Certified" class="cert-logo">
                             <span class="cert-name">Rainforest Alliance</span>
                         </div>
                         <div class="cert-item">
-                            <img src="RSPO-Certified.png" alt="RSPO Certified" class="cert-logo">
+                            <img src="/assets/images/RSPO-Certified.png" alt="RSPO Certified" class="cert-logo">
                             <span class="cert-name">RSPO Certified</span>
                         </div>
                     </div>
