Improve additional product categories section

--- a/index.html
+++ b/index.html
@@ -125,28 +125,78 @@
                 </div>
             </div>
 
-            <div class="category">
-                <h3>Additional Product Lines</h3>
-                <div class="additional-products">
-                    <div class="product-type">
-                        <i class="fas fa-utensils"></i>
-                        <h4>Pasta</h4>
-                        <p>High-quality pasta production facilities in Portugal and Czechia</p>
+            <div class="category business-units">
+                <div class="product-grid">
+                    <div class="product-card pasta">
+                        <div class="vertical-text">PASTA</div>
+                        <div class="product-media">
+                            <video class="product-video" autoplay muted loop playsinline>
+                                <source src="assets/videos/pasta-production.webm" type="video/webm">
+                                <source src="assets/videos/pasta-production.mov" type="video/quicktime">
+                            </video>
+                            <div class="product-details">
+                                <p>Strategic production facilities in Portugal and Czechia, offering a wide range of pasta varieties.</p>
+                                <div class="product-features">
+                                    <span><i class="fas fa-utensils"></i> Traditional</span>
+                                    <span><i class="fas fa-leaf"></i> Organic</span>
+                                    <span><i class="fas fa-wheat-awn"></i> Durum Wheat</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="product-type">
-                        <i class="fas fa-cookie"></i>
-                        <h4>Cookies</h4>
-                        <p>Delicious cookies produced with premium ingredients</p>
+
+                    <div class="product-card biscuits">
+                        <div class="vertical-text">BISCUITS</div>
+                        <div class="product-media">
+                            <video class="product-video" autoplay muted loop playsinline>
+                                <source src="assets/videos/biscuits-production.webm" type="video/webm">
+                                <source src="assets/videos/biscuits-production.mov" type="video/quicktime">
+                            </video>
+                            <div class="product-details">
+                                <p>From sweet to savory, our biscuit range combines traditional recipes with modern nutrition.</p>
+                                <div class="product-features">
+                                    <span><i class="fas fa-cookie"></i> Sweet Biscuits</span>
+                                    <span><i class="fas fa-box"></i> Cereal Bars</span>
+                                    <span><i class="fas fa-heart"></i> Health Snacks</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="product-type">
-                        <i class="fas fa-box"></i>
-                        <h4>Snack Bars</h4>
-                        <p>Nutritious and convenient snack bars for on-the-go consumption</p>
+
+                    <div class="product-card bars">
+                        <div class="vertical-text">BARS</div>
+                        <div class="product-media">
+                            <video class="product-video" autoplay muted loop playsinline>
+                                <source src="assets/videos/bars-production.webm" type="video/webm">
+                                <source src="assets/videos/bars-production.mov" type="video/quicktime">
+                            </video>
+                            <div class="product-details">
+                                <p>Innovative snack and cereal bars designed for modern consumers, combining nutrition with convenience.</p>
+                                <div class="product-features">
+                                    <span><i class="fas fa-leaf"></i> Natural</span>
+                                    <span><i class="fas fa-heart"></i> Nutritious</span>
+                                    <span><i class="fas fa-running"></i> Active Lifestyle</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="product-type">
-                        <i class="fas fa-wheat-awn"></i>
-                        <h4>Flour</h4>
-                        <p>Premium quality flour milled from carefully selected grains</p>
+
+                    <div class="product-card flour">
+                        <div class="vertical-text">FLOUR</div>
+                        <div class="product-media">
+                            <video class="product-video" autoplay muted loop playsinline>
+                                <source src="assets/videos/flour-production.webm" type="video/webm">
+                                <source src="assets/videos/flour-production.mov" type="video/quicktime">
+                            </video>
+                            <div class="product-details">
+                                <p>Premium flour production combining generations of milling expertise with innovative technology.</p>
+                                <div class="product-features">
+                                    <span><i class="fas fa-wheat-awn"></i> Industrial Grade</span>
+                                    <span><i class="fas fa-bread-slice"></i> Bakery Special</span>
+                                    <span><i class="fas fa-cookie"></i> Pastry Blend</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
