Improve fonts and banner responsiveness

--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
             <source src="assets/videos/Ambicao-Cerealis.webm" type="video/webm">
             <source src="assets/videos/Ambicao-Cerealis.mov" type="video/quicktime">
         </video>
-        <h1>Turning Cereal Heritage into Supply Security</h1>
-        <p>Retailers deserve a stable and flexible supply chain. Cerealis delivers.</p>
+        <div class="banner-content">
+            <div class="banner-title">
+                <h1>Turning Cereal Heritage</h1>
+                <h1>into Supply Security</h1>
+            </div>
+            <div class="banner-text">
+                <p>Retailers deserve a <strong>stable</strong> and <strong>flexible</strong> supply chain.</p>
+                <p>Cerealis delivers.</p>
+            </div>
+        </div>
     </header>
 
     <section class="numbers" id="numbers">
