--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
     <script src="map.js"></script>
     <script src="numbers.js"></script>
     <script src="carousel.js"></script>
+    <script src="navigation.js"></script>
     <script>
         // Ensure page starts at the top when loaded
         window.onload = function() {
