Improve colors to use more the brand colors and correct

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="numbers" id="numbers">
         <div class="stat"><strong>440,000</strong> Tons Produced</div>
-        <div class="stat"><strong>5</strong> Product Categories</div>
+        <div class="stat"><strong>11</strong>Factories</div>
         <div class="stat"><strong>160</strong> Private Label Products in Breakfast Cereals</div>
     </section>
 
