--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <a href="#quality">Quality</a>
             <a href="#global-presence">Global Presence</a>
             <a href="#sustainability">Sustainability</a>
-            <a href="#values">Values</a>
-            <a href="#contact">Contact</a>
+            <a href="#values">Partner with Us</a>
         </div>
     </nav>
 
@@ -147,7 +146,6 @@
                                 <div class="product-features">
                                     <span><i class="fas fa-utensils"></i> Traditional</span>
                                     <span><i class="fas fa-leaf"></i> Organic</span>
-                                    <span><i class="fas fa-wheat-awn"></i> Durum Wheat</span>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +162,6 @@
                                 <p>From sweet to savory, our biscuit range combines traditional recipes with modern nutrition.</p>
                                 <div class="product-features">
                                     <span><i class="fas fa-cookie"></i> Sweet Biscuits</span>
-                                    <span><i class="fas fa-box"></i> Cereal Bars</span>
                                     <span><i class="fas fa-heart"></i> Health Snacks</span>
                                 </div>
                             </div>
@@ -182,7 +179,6 @@
                                 <p>Innovative snack and cereal bars designed for modern consumers, combining nutrition with convenience.</p>
                                 <div class="product-features">
                                     <span><i class="fas fa-leaf"></i> Natural</span>
-                                    <span><i class="fas fa-heart"></i> Nutritious</span>
                                     <span><i class="fas fa-running"></i> Active Lifestyle</span>
                                 </div>
                             </div>
@@ -199,7 +195,6 @@
                             <div class="product-details">
                                 <p>Premium flour production combining generations of milling expertise with innovative technology.</p>
                                 <div class="product-features">
-                                    <span><i class="fas fa-wheat-awn"></i> Industrial Grade</span>
                                     <span><i class="fas fa-bread-slice"></i> Bakery Special</span>
                                     <span><i class="fas fa-cookie"></i> Pastry Blend</span>
                                 </div>
@@ -309,6 +304,7 @@
         <div class="location-list">
             <!-- Sidebar content will be dynamically updated based on the selected view -->
         </div>
+        <div id="map-tooltip" class="map-tooltip"></div>
     </section>
 
     <section class="sustainability" id="sustainability">
@@ -368,7 +364,14 @@
     </section>
     
     <section class="values" id="values">
-        <h2>Our Values</h2>
+        <div class="partner-section-header">
+            <h2>Partner with Us</h2>
+            <div class="section-intro-container">
+                <p class="section-intro">These are the values that drive our partnerships</p>
+                <div class="intro-underline"></div>
+            </div>
+        </div>
+        
         <div class="values-grid">
             <div class="value-card speak-up">
                 <h3>Speak Up</h3>
@@ -406,12 +409,21 @@
                 </div>
             </div>
         </div>
-    </section>
 
-    <section class="cta" id="contact">
-        <h2>Partner with Us</h2>
-        <p>We provide both mainstream and high-value niche cereals. Secure your supply today!</p>
-        <a href="#contact" class="btn">Get in Touch</a>
+        <div class="partner-cta-wrapper">
+            <div class="cta-container">
+                <div class="cta-content">
+                    <h3 class="cta-title">Ready to Partner?</h3>
+                    <p class="cta-text">We provide both mainstream and high-value niche cereals. Secure your supply today!</p>
+                </div>
+                <div class="cta-button-container">
+                    <a href="https://www.cerealis.pt/index.php/contacts/?lang=en" class="cta-button" target="_blank">
+                        Get in Touch
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
