--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <meta property="twitter:image" content="assets/images/og-image.jpg">
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg">
+    <link rel="alternate icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.svg">
+    <link rel="alternate icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-32x32.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/favicon-32x32.svg">
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#ffffff">
 
