Add missing image and fix hamburguer menu on mobile

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 </head>
 <body>
     <nav class="navbar">
+        <button class="hamburger" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#numbers">Key Numbers</a>
