Improve map for mobile

--- a/index.html
+++ b/index.html
@@ -375,9 +375,11 @@
 
     <section class="global-presence" id="global-presence">
         <h2>Global Presence</h2>
-        <div id="world-map"></div>
-        <div class="location-list">
-            <!-- Sidebar content will be dynamically updated based on the selected view -->
+        <div class="map-container">
+            <div id="world-map"></div>
+            <div class="location-list">
+                <!-- Sidebar content will be dynamically updated based on the selected view -->
+            </div>
         </div>
     </section>
 
